Update Jekyll site with custom layout and new content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <footer class="sidebar-footer">
         <p>Vytis Krupovnickas © {{ site.time | date: '%Y' }}</p>
         <p>
-          <a href="https://github.com/YOUR_USERNAME">GitHub</a> · 
+          <a href="https://github.com/Vytis-K">GitHub</a> · 
           <a href="https://twitter.com/YOUR_HANDLE">Twitter</a>
         </p>
       </footer>
