--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,36 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>{{ page.title }} | Quantum Nucleotides</title>
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
-</head>
-<body>
-  <div class="container">
+<div class="container">
     <div class="main-content">
       {{ content }}
     </div>
+  
     <aside class="sidebar">
       <h1 class="site-title">Quantum Nucleotides</h1>
+  
       <nav class="nav-links">
         <ul>
           <li><a href="{{ '/' | relative_url }}">Home</a></li>
           <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
-          <li><a href="{{ '/lectures' | relative_url }}">Lectures and Derivations</a></li>
+          <li><a href="{{ '/lectures' | relative_url }}">Lectures</a></li>
           <li><a href="{{ '/notes' | relative_url }}">Notes</a></li>
           <li><a href="{{ '/resume' | relative_url }}">Resume</a></li>
           <li><a href="{{ '/book-reviews' | relative_url }}">Book Reviews</a></li>
           <li><a href="{{ '/archive' | relative_url }}">Archive</a></li>
         </ul>
       </nav>
+  
       <footer class="sidebar-footer">
         <p>Vytis Krupovnickas © {{ site.time | date: '%Y' }}</p>
         <p>
-          <a href="https://github.com/Vytis-K">GitHub</a> · 
+          <a href="https://github.com/YOUR_USERNAME">GitHub</a> · 
           <a href="https://twitter.com/YOUR_HANDLE">Twitter</a>
         </p>
       </footer>
     </aside>
   </div>
-</body>
-</html>
+  
