--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
 <body>
   <div class="container">
     <div class="main-content">
-      {{ content }}
+      <div class="post">
+        {{ content }}
+      </div>
     </div>
     <aside class="sidebar">
       <h1 class="site-title">Quantum Nucleotides</h1>
