--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+
 body {
     margin: 0;
     font-family: 'Helvetica Neue', sans-serif;
@@ -12,16 +19,22 @@ body {
   }
   
   .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 250px;
+    height: 100vh;
+    padding: 20px;
     background: #1c1c1c;
     color: white;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: sticky;
-    top: 0;
-    height: 100vh;
+  }
+
+  .main-content {
+    margin-left: 250px;
+    padding: 40px;
   }
   
   .sidebar h1.site-title {
