--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-
 body {
     margin: 0;
     font-family: 'Helvetica Neue', sans-serif;
@@ -19,22 +12,21 @@ body {
   }
   
   .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 250px;
-    height: 100vh;
-    padding: 20px;
     background: #1c1c1c;
     color: white;
+    padding: 20px;
+  
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
-
-  .main-content {
-    margin-left: 250px;
-    padding: 40px;
+  
+    position: sticky;
+    top: 0;
+  
+    /* instead of height:100vh; */
+    max-height: 100vh;
+    overflow-y: auto;
   }
   
   .sidebar h1.site-title {
