Add Quantum Nucleotide Project page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,18 +18,18 @@
         <ul>
           <li><a href="{{ '/' | relative_url }}">Home</a></li>
           <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
+          <li><a href="{{ '/notebook' | relative_url }}">Notebook</a></li>
           <li><a href="{{ '/lectures' | relative_url }}">Lectures</a></li>
-          <li><a href="{{ '/notes' | relative_url }}">Notes</a></li>
-          <li><a href="{{ '/resume' | relative_url }}">Resume</a></li>
-          <li><a href="{{ '/book-reviews' | relative_url }}">Book Reviews</a></li>
+          <li><a href="{{ '/about' | relative_url }}">About</a></li>
+          <li><a href="{{ '/media-reviews' | relative_url }}">Media Reviews</a></li>
+          <li><a href="{{ '/interesting-items' | relative_url }}">Interesting Items</a></li>
           <li><a href="{{ '/archive' | relative_url }}">Archive</a></li>
         </ul>
       </nav>
       <footer class="sidebar-footer">
         <p>Vytis Krupovnickas © {{ site.time | date: '%Y' }}</p>
         <p>
-          <a href="https://github.com/Vytis-K">GitHub</a> · 
-          <a href="https://twitter.com/YOUR_HANDLE">Twitter</a>
+          <a href="https://github.com/Vytis-K">GitHub</a> ·
         </p>
       </footer>
     </aside>
