--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <title>{{ page.title }} | Quantum Nucleotides</title>
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+
+  {% if page.math %}
+  <!-- MathJax for LaTeX equations -->
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
+  {% endif %}
+
 </head>
 <body>
   <div class="container">
