Quizzes section added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,18 +27,18 @@
         <ul>
           <li><a href="{{ '/' | relative_url }}">Home</a></li>
           <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
-          <li><a href="{{ '/notebook' | relative_url }}">Notebook</a></li>
+          <li><a href="{{ '/working-notes' | relative_url }}">Working Notes</a></li>
           <li><a href="{{ '/lectures' | relative_url }}">Lectures</a></li>
-          <li><a href="{{ '/about' | relative_url }}">About</a></li>
           <li><a href="{{ '/media-reviews' | relative_url }}">Media Reviews</a></li>
-          <li><a href="{{ '/interesting-items' | relative_url }}">Interesting Items</a></li>
+          <li><a href="{{ '/quizzes' | relative_url }}">Quizzes</a></li>
           <li><a href="{{ '/archive' | relative_url }}">Archive</a></li>
+          <li><a href="{{ '/about' | relative_url }}">About</a></li>
         </ul>
       </nav>
       <footer class="sidebar-footer">
         <p>Vytis Krupovnickas © {{ site.time | date: '%Y' }}</p>
         <p>
-          <a href="https://github.com/Vytis-K">GitHub</a> ·
+          <a href="https://github.com/Vytis-K">GitHub</a>
         </p>
       </footer>
     </aside>
