Update website content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
           <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
           <li><a href="{{ '/working-notes' | relative_url }}">Working Notes</a></li>
           <li><a href="{{ '/lectures' | relative_url }}">Lectures</a></li>
-          <li><a href="{{ '/media-reviews' | relative_url }}">Media Reviews</a></li>
+          <li><a href="{{ '/Research & Reports' | relative_url }}">Research & Reports</a></li>
+          <li><a href="{{ '/book-reviews' | relative_url }}">Book Reviews</a></li>
           <li><a href="{{ '/quizzes' | relative_url }}">Quizzes</a></li>
           <li><a href="{{ '/archive' | relative_url }}">Archive</a></li>
           <li><a href="{{ '/about' | relative_url }}">About</a></li>
